--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <script src="script.js"></script>
 
   <!-- Replace API_KEY and MAP_ID with your own ones -->
-  <script src="https://maps.googleapis.com/maps/api/js?key=API_KEY&map_ids=MAP_ID&callback=initMap">
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAYYCFU44bCNqvWs2Hrfpu99VPzPwI01EY&map_ids=3075da77223e48ef&callback=initMap">
 </script>
 </body>
 </html>
